--- a/StoreApp/StoreApp.WebApplication/wwwroot/index.html
+++ b/StoreApp/StoreApp.WebApplication/wwwroot/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="DispatcherService.WebApplication.styles.css" />
-    <title>DispatcherService.WebApplication</title>
+    <link rel="stylesheet" href="StoreApp.WebApplication.styles.css" />
+    <title>StoreApp.WebApplication</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
     <!-- If you add any scoped CSS files, uncomment the following to load them
